trash:/ set the UDS_LOCAL_PATH

Should fix test regression:
https://build.kde.org/job/Frameworks/job/kio/job/kf5-qt5%20SUSEQt5.15/1586/testReport/projectroot.src.ioslaves.trash/tests/testtrash/

cc https://invent.kde.org/frameworks/kio/-/merge_requests/618#note_457689

BUG: 368104